# Transcriber

./: CMakeLists.txt  CMakePresets.json  mainwindow.cpp  mainwindow.h  pch.h  portaudio.exp  transcriber.cpp
libs/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib  portaudio.h  portaudio.lib
pch/: pch.h
